--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,295 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html {
+      height: 100%;
+    }
+
+    body {
+      min-height: 100%;
+      background: #eee;
+      font-family: 'Lato', sans-serif;
+      font-weight: 400;
+      color: #222;
+      font-size: 14px;
+      line-height: 26px;
+      padding-bottom: 50px;
+    }
+
+    .container {
+      max-width: 700px;
+      background: #fff;
+      margin: 0px auto 0px;
+      box-shadow: 1px 1px 2px #DAD7D7;
+      border-radius: 3px;
+      padding: 40px;
+      margin-top: 50px;
+    }
+
+    .header {
+      margin-bottom: 30px;
+    }
+    .header .full-name {
+      font-size: 40px;
+      text-transform: uppercase;
+      margin-bottom: 5px;
+    }
+    .header .first-name {
+      font-weight: 700;
+    }
+    .header .last-name {
+      font-weight: 300;
+    }
+    .header .contact-info {
+      margin-bottom: 20px;
+    }
+    .header .email,
+    .header .phone {
+      color: #999;
+      font-weight: 300;
+    }
+    .header .separator {
+      height: 10px;
+      display: inline-block;
+      border-left: 2px solid #999;
+      margin: 0px 10px;
+    }
+    .header .position {
+      font-weight: bold;
+      display: inline-block;
+      margin-right: 10px;
+      text-decoration: underline;
+    }
+
+    .details {
+      line-height: 20px;
+    }
+    .details .section {
+      margin-bottom: 40px;
+    }
+    .details .section:last-of-type {
+      margin-bottom: 0px;
+    }
+    .details .section__title {
+      letter-spacing: 2px;
+      color: #54AFE4;
+      font-weight: bold;
+      margin-bottom: 10px;
+      text-transform: uppercase;
+    }
+    .details .section__list-item {
+      margin-bottom: 40px;
+    }
+    .details .section__list-item:last-of-type {
+      margin-bottom: 0;
+    }
+    .details .left,
+    .details .right {
+      vertical-align: top;
+      display: inline-block;
+    }
+    .details .left {
+      width: 60%;
+    }
+    .details .right {
+      tex-align: right;
+      width: 39%;
+    }
+    .details .name {
+      font-weight: bold;
+    }
+    .details a {
+      text-decoration: none;
+      color: #000;
+      font-style: italic;
+    }
+    .details a:hover {
+      text-decoration: underline;
+      color: #000;
+    }
+    .details .skills__item {
+      margin-bottom: 10px;
+    }
+    .details .skills__item .right input {
+      display: none;
+    }
+    .details .skills__item .right label {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      background: #C3DEF3;
+      border-radius: 20px;
+      margin-right: 3px;
+    }
+    .details .skills__item .right input:checked + label {
+      background: #79A9CE;
+    }
+    </style>
+
   </head>
   <body>
-    <p>Hello World!</p>
+
+    <div class="container">
+  <div class="header">
+    <div class="full-name">
+      <span class="first-name">Harris</span>
+      <span class="last-name">Byrnes</span>
+    </div>
+    <div class="contact-info">
+      <span class="email">Email: </span>
+      <span class="email-val">harrybyrnes98@gmail.com</span>
+      <span class="separator"></span>
+      <span class="phone">Phone: </span>
+      <span class="phone-val">019-911 7482</span>
+    </div>
+
+    <div class="about">
+      <span class="position">Profile</span><br>
+      <span class="desc">
+        I am reasonably well-versed in computer technology such as programming and web developing as well as using the tools of Microso Oﬀice. I am also very proficient in two languages which are English and Malay as I was raised having to use both languages quite often. I have also picked up little bits of Arabic from school.
+      </span>
+    </div>
+  </div>
+   <div class="details">
+    <div class="section">
+      <div class="section__title">CoCuricular Activities</div>
+      <div class="section__list">
+        <div class="section__list-item">
+          <div class="left">
+            <div class="name">MSSD Under-18 Soccer Tournament</div>
+            <div class="addr">Kuantan, Pahang</div>
+            <div class="duration">2015</div>
+          </div>
+          <div class="right">
+            <div class="name">Achievement</div>
+            <div class="desc">Seeded 3rd for district team</div>
+          </div>
+        </div>
+                <div class="section__list-item">
+          <div class="left">
+            <div class="name">MSSD Under-18 Track & Field</div>
+            <div class="addr">Kuantan, Pahang</div>
+            <div class="duration">2015</div>
+          </div>
+          <div class="right">
+            <div class="name">Achievement</div>
+            <div class="desc">Seeded 1st for district team</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="section">
+      <div class="section__title">Education</div>
+      <div class="section__list">
+        <div class="section__list-item">
+          <div class="left">
+            <div class="name">Bachelor of Information Technology</div>
+            <div class="addr">International Islamic University of Malaysia, Gombak</div>
+            <div class="duration">2017 - Present</div>
+          </div>
+          <div class="right">
+            <div class="name">Current CGPA</div>
+            <div class="desc">3.32</div>
+          </div>
+        </div>
+        <div class="section__list-item">
+          <div class="left">
+            <div class="name">Sijil Pelajaran Malaysia</div>
+            <div class="addr">Sekolah Menengah Islam Al-Irsyad, Kuantan</div>
+            <div class="duration">2011 - 2015</div>
+          </div>
+          <div class="right">
+            <div class="name">Result</div>
+            <div class="desc">4A 7B</div>
+          </div>
+        </div>
+
+      </div>
+
+  </div>
+     <div class="section">
+      <div class="section__title">Leadership Skills</div>
+       <div class="section__list">
+         <div class="section__list-item">
+           <div class="name">Head Prefect</div>
+           <div class="text">Head Prefect of Sekolah Menengah Islam Al-Irsyad, 2015</div>
+         </div>
+
+         <div class="section__list-item">
+                    <div class="name">Head Student</div>
+           <div class="text">Head Student of Sekolah Menengah Islam Al-Irsyad, 2015</div>
+         </div>
+       </div>
+    </div>
+     <div class="section">
+       <div class="section__title">Skills</div>
+       <div class="skills">
+         <div class="skills__item">
+           <div class="left"><div class="name">
+             Programming
+             </div></div>
+           <div class="right">
+                          <input  id="ck1" type="checkbox" checked/>
+
+             <label for="ck1"></label>
+                          <input id="ck2" type="checkbox" checked/>
+
+              <label for="ck2"></label>
+                         <input id="ck3" type="checkbox" />
+
+              <label for="ck3"></label>
+                           <input id="ck4" type="checkbox" />
+            <label for="ck4"></label>
+                          <input id="ck5" type="checkbox" />
+              <label for="ck5"></label>
+
+           </div>
+         </div>
+
+       </div>
+       <div class="skills__item">
+           <div class="left"><div class="name">
+             MS Office</div></div>
+           <div class="right">
+                          <input  id="ck1" type="checkbox" checked/>
+
+             <label for="ck1"></label>
+                          <input id="ck2" type="checkbox" checked/>
+
+              <label for="ck2"></label>
+                         <input id="ck3" type="checkbox" checked/>
+
+              <label for="ck3"></label>
+                           <input id="ck4" type="checkbox" />
+            <label for="ck4"></label>
+                          <input id="ck5" type="checkbox" />
+              <label for="ck5"></label>
+
+           </div>
+         </div>
+
+       </div>
+     <div class="section">
+     <div class="section__title">
+       Interests
+       </div>
+       <div class="section__list">
+         <div class="section__list-item">
+                  Football, volleyball, reading, programming, swimming
+          </div>
+       </div>
+     </div>
+     </div>
+  </div>
+
   </body>
 </html>
+
